--- a/src/app/buildOrder/templates/buildOrder.orderHistoryDetails.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.orderHistoryDetails.tpl.html
@@ -55,7 +55,7 @@
 										<div class="row">
 											<div class="flower">
 												<span>
-											<img src="assets/images/flowers.jpg" alt="flowers">
+											<img src="{{orderSummary.xp.ProductImageUrl}}" alt="flowers">
 									</span>
 
 											</div>
