--- a/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
@@ -1,5 +1,5 @@
 <ui-view>
-	<div id="order-summary" class="oms_main_container buildOrder-order-summary" ng-show="showOrdersummary">
+	<div id="order-summary" class="oms_main_container buildOrder-order-summary" ng-show="showOrdersummary" cg-busy="{promise:buildordersummary.OrderSummaryLoader,templateUrl:'common/loading-indicators/templates/view.loading.tpl.html'}">
 		<div class="buildOrder-order-summary-content">
 			<div class="order-info">
 				<h1>Active Order Summary</h1>
@@ -294,7 +294,7 @@
 														<span>
 					<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -394,7 +394,7 @@
 														<span>
 					<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -494,7 +494,7 @@
 														<span>
 					<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -598,7 +598,7 @@
 														<span>
 					<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -698,7 +698,7 @@
 														<span>
 				<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -798,7 +798,7 @@
 														<span>
 				<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -898,7 +898,7 @@
 														<span>
 					<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg ng-if="!isProEdit" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 <g>
 	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
@@ -999,7 +999,7 @@
 													<div>
 														<?xml version="1.0" encoding="utf-8"?>
 															<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-															<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
+															<!-- <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 																<g>
 																	<path d="M118.2,243.9c-0.5,0-0.9-0.4-0.9-0.9V238H116v5.1c0,0.5-0.4,0.9-0.9,0.9s-0.9-0.4-0.9-0.9V238h-1.3v5.1
 		c0,0.5-0.4,0.9-0.9,0.9c-0.5,0-0.9-0.4-0.9-0.9v-5.9c0-0.5,0.4-0.9,0.9-0.9h6.2c0.2,0,0.5,0.1,0.6,0.3s0.3,0.4,0.3,0.6v5.9
@@ -1081,7 +1081,7 @@
 		C113.5,53.4,118.1,47.7,113.5,43z" />
 																	<polygon points="31.9,111.8 63,102.6 40.6,80.2 	" />
 																</g>
-															</svg>
+															</svg> -->
 
 															</span>
 													</div>
