--- a/src/app/orderClaim/less/orderClaim.less
+++ b/src/app/orderClaim/less/orderClaim.less
@@ -201,3 +201,25 @@
 		}
 	}
 }
+.orderclaimtotal{
+	float:right;
+	font-size:14px;
+	margin-bottom: 20px;
+	margin-right: 16px;
+	h3{
+		margin:0px 0 10px 0;
+		font-size:20px;
+		.helvetica-bold;
+	}
+	div{
+		 span:last-child{
+			text-align: right;
+    		float: right;
+			.helvetica-bold;
+		}
+		span:first-child{
+		  width:69%;
+		  float:left;
+		}
+	}
+}
