--- a/src/app/orderClaim/templates/orderClaim.tpl.html
+++ b/src/app/orderClaim/templates/orderClaim.tpl.html
@@ -37,8 +37,8 @@
 				            	</div> -->
 				            	<div>
         							<input type="checkbox" ng-disabled="orderSummary.selectresolution=='' || orderSummary.selectcode==''" ng-model="orderSummary.checkclaim" ng-click="orderClaim.selectorderclaims(orderSummary)" 
-        							id="orderclaim" class="checkbox-custom" >
-        						    <label for="orderclaim" class="checkbox-custom-label"></label>{{orderSummary.checkclaim}}
+        							id="orderclaim" class="checkbox-custom" style="opacity: 1;" >
+        						    <!-- <label for="orderclaim" class="checkbox-custom-label"></label> -->
         						</div>
 				        	</th>
 					    	<td  class="qty-value">{{orderSummary.Quantity}}</td>
