--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -1466,6 +1466,9 @@ input.error {
 		.position-common;
 		right: 0;
 		background-color: @color0;
+		.prod-variants span{
+			text-transform:lowercase;
+		}
 		.no-items{
 			position: absolute;
 			top: 50%;
@@ -1829,6 +1832,10 @@ input.error {
 						height: 25px;
 					}
 					.location-Code {
+						.address-cart a{
+							font-size:12px;
+							.helvetica-bold;
+						}
 						.zipcont{
 							padding:0px;
 							width:25%;
