--- a/src/app/custInfo/less/custInfo.less
+++ b/src/app/custInfo/less/custInfo.less
@@ -377,8 +377,8 @@ input[type="number"],input[type="text"],input[type="email"],textarea,input[type=
 				padding:0;
 			}
 			.form-control.dropdown{
-				background-repeat: no-repeat;
-				background-position: right center;
+				background-repeat: no-repeat !important;
+				background-position: right center !important;
 			}
 			#security-select2,input{
 			    -webkit-appearance: none;
