--- a/src/app/buildOrder/templates/buildOrder.right.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.right.tpl.html
@@ -246,7 +246,7 @@
 										</div>
 									</script>
 								</span>
-								<img src="/src/assets/images/error.png" ng-if="buildOrderRight.lineItemForm[lineitem.ID].formError" />
+								<img src="../assets/images/error.png" ng-if="buildOrderRight.lineItemForm[lineitem.ID].formError" />
 							</uib-accordion-heading>
 							<div class="receipient-drpDown">
 								<div class="qty">
